GNOME Bugzilla – Bug 737510
Ignores G_FILE_COPY_NO_FALLBACK_FOR_MOVE for push/pull
Last modified: 2014-10-17 19:40:43 UTC
The client module ignores G_FILE_COPY_NO_FALLBACK_FOR_MOVE for push/pull which makes Nautilus not display the progress bar when push/pulling multiple selected files.
Created attachment 287271 [details] [review] client: Check for G_FILE_COPY_NO_FALLBACK_FOR_MOVE when push/pulling Fail if G_FILE_COPY_NO_FALLBACK_FOR_MOVE is specified and either a pull or a push is going to be executed.
Created attachment 287272 [details] [review] gvfs-move: Allow specifying G_FILE_COPY_NO_FALLBACK_FOR_MOVE Allow specifying G_FILE_COPY_NO_FALLBACK_FOR_MOVE when moving by passing "-c" to gvfs-move.
Review of attachment 287271 [details] [review]: Makes sense, but it would be better to commit after we branch master, because it slightly changes the current behavioral of g_file_move...
Review of attachment 287272 [details] [review]: I've just realized almost all negative options have short option with capital letter, e.g. gvfs-copy: -T, --no-target-directory -P, --no-dereference So it should be -C, not -c.
Pushed to master as 0077603d193ddd8c3c6f2d7f9053808b0ff1f944 (with a slight fixup). Thanks for the review!