client: Check for G_FILE_COPY_NO_FALLBACK_FOR_MOVE when push/pulling

Fail if G_FILE_COPY_NO_FALLBACK_FOR_MOVE is specified and either a pull
or a push is going to be executed.

https://bugzilla.gnome.org/show_bug.cgi?id=737510